kubernetes/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: rails-mysql-kubernetes
spec:
  ports:
    - port: 3306
  selector:
    app: rails-mysql-kubernetes
    tier: database
