kubernetes/rails_app.yml
apiVersion: v1
kind: Service
metadata:
  name: rails
  labels:
    app: rails_mysql_kubernetes
spec:
  ports:
    - port: 3000
  selector:
    app: rails_mysql_kubernetes
    tier: backend
