kubernetes/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: rails_mysql_kubernetes
spec:
  ports:
    - port: 6379
  selector:
    app: rails_mysql_kubernetes
    tier: redis
